--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -11,7 +11,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChUleMzeFoX_7BvCcaPuqk2n9Vda_PN4U&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChUleMzeFoX_7BvCcaPuqk2n9Vda_PN4U&libraries=geometry,drawing,places"></script>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
